# fastapi-full-stack-application

./: .gitignore
app/: docker-compose.yaml
app/backend/: pyproject.toml  requirements.txt
app/backend/app/: main.py  tasks.py
app/backend/app/alembic/: env.py
app/backend/app/alembic/versions/: 4f5b989bbc06_.py
app/backend/app/api/: dependencies.py
app/backend/app/api/api/: api.py
app/backend/app/api/api/routes/: auth.py  users.py
app/backend/app/core/: auth.py  celery_app.py  config.py  i18n.py  security.py
app/backend/app/crud/: crud_user.py
app/backend/app/db/: base.py  data_init.py  session.py
app/backend/app/models/: __init__.py  item.py  user.py
app/backend/app/schemas/: token.py  user.py
app/configurations/: prometheus.yaml
app/frontend/: run.sh
app/nginx/: nginx.conf
app/scripts/: build.sh  test_backend.sh  test_backend_frontend.sh
